core/src/ast/snapshots/diplomat_core__ast__methods__tests__nonstatic_methods-2.snap
---
source: core/src/ast/methods.rs
expression: "Method::from_syn(&syn::parse_quote!\n{\n    #[diplomat::rust_link(foo::Bar::batz, FnInStruct)] fn\n    foo(&mut self, x: u64, y: MyCustomStruct) -> u64 { x }\n},\nPathType::new(Path::empty().sub_path(Ident::from(\"MyStructContainingMethod\"))),\nNone, &Attrs::default(), &crate::ast::SpanLocation::None)"
---
name:
  - foo
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
docs:
  - - cfg: Star
      lines: ""
  - - path:
        elements:
          - - foo
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
          - - Bar
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
          - - batz
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
      typ: FnInStruct
      display: Normal
abi_name:
  - MyStructContainingMethod_foo
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
self_param:
  reference:
    - Anonymous
    - Mutable
  path_type:
    path:
      elements:
        - - MyStructContainingMethod
          - ~
    lifetimes: []
  attrs: {}
self_type:
  path:
    elements:
      - - MyStructContainingMethod
        - ~
  lifetimes: []
params:
  - name:
      - x
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    ty:
      Primitive: u64
    attrs: {}
  - name:
      - y
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    ty:
      Named:
        path:
          elements:
            - - MyCustomStruct
              - start_line: 1
                column_line: 0
                range:
                  start: 0
                  end: 0
                span_location: None
        lifetimes: []
    attrs: {}
return_type:
  Primitive: u64
lifetime_env: {}
attrs: {}
